--- a/ui/src/app/home/my-profile/user-header/user-header.component.html
+++ b/ui/src/app/home/my-profile/user-header/user-header.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white p-4 rounded rounded-2 d-sm-flex border">
     <div class="align-self-center text-center">
-        <img class="rounded-circle" src="https://via.placeholder.com/150" width="150" height="150" alt="userimage" id="user_image">
+        <img class="rounded-circle" [src]="currentUser.userImg" width="150" height="150" alt="userimage" id="user_image">
     </div>
     <div class="ps-sm-4 pt-2 text-center text-sm-start">
         <h2>
