ui - pagedresponse model

--- a/ui/src/app/auth/login/login.component.html
+++ b/ui/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="pt-2"></div>
         <div class="py-5 d-sm-flex flex-column justify-content-center align-items-center">
             <div class="text-center">
-                <img th:src="@{/logotest2.png}" alt="test" class="mt-0" width="100" height="100" >
+                <!-- <img th:src="@{/logotest2.png}" alt="test" class="mt-0" width="100" height="100" > -->
                 <h3 class="text-white mb-5"><strong>bookstore-springboot</strong></h3>
             </div>
             <div class="bg-white col-xl-4 col-lg-5 col-md-7 col-sm-9" style="box-shadow: 0 0 25px 0 #a0331b; border-radius: 0.5rem;">
