--- a/ui/src/app/home/exchange/exchange.component.html
+++ b/ui/src/app/home/exchange/exchange.component.html
@@ -85,7 +85,7 @@
     </div>
     <div id="modal-footer">
         <div class="d-flex justify-content-end">
-            <button class="btn btn-dark me-2" (click)="onCloseModal()">Cancel</button>
+            <button class="btn btn-outline-secondary me-2" (click)="onCloseModal()">Cancel</button>
             <button type="submit" class="btn btn-custom-orange" form="exchange-form" [disabled]="!exchangeForm.valid">Submit</button>
         </div>
     </div>
