--- a/ui/src/app/home/my-profile/user-header/user-header.component.html
+++ b/ui/src/app/home/my-profile/user-header/user-header.component.html
@@ -9,13 +9,13 @@
         </h2>
         <div class="ps-sm-2 d-flex flex-column text-center text-sm-start">
             <small class=" mb-1">{{ currentUser.email }}</small>
-            <small class=" mb-1">Reviews made: 10</small>
+            <!-- <small class=" mb-1">Reviews made: 10</small> -->
             <div *ngIf="!viewingOtherProfile">
                 <div class="" >
                     <small class="">You have <span class="bg-warning rounded-3 ps-1 pe-1 fw-bold">{{userCreditBal | currency}}</span> store credits</small>
                 </div>
             </div>
-            <small th:text="|User since ${#temporals.format(user.registeredOn, 'dd MMMM yyyy')}|" class="my-2">User since 26 February 2021</small>
+            <!-- <small th:text="|User since ${#temporals.format(user.registeredOn, 'dd MMMM yyyy')}|" class="my-2">User since 26 February 2021</small> -->
         </div>
     </div>
 </div>
