--- a/ui/src/app/home/checkout/checkout.component.html
+++ b/ui/src/app/home/checkout/checkout.component.html
@@ -6,7 +6,7 @@
             <li *ngFor="let cartItem of cart" class="list-group-item">
                 <div class="d-flex">
                     <h6 class="p-0 m-0">{{cartItem.title}}</h6>
-                    <h6 class="m-0 ms-auto fw-light">${{cartItem.price}}</h6>
+                    <h6 class="m-0 ms-auto fw-light">{{cartItem.price | currency}}</h6>
                 </div>
                 <small class="text-muted">{{cartItem.author}}</small>
             </li>
