--- a/ui/src/app/home/books/book-detail/reviews/reviews.component.html
+++ b/ui/src/app/home/books/book-detail/reviews/reviews.component.html
@@ -87,7 +87,7 @@
                 <span *ngIf="isSavingReview" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 <span *ngIf="isErrorSavingReview"><i class="bi bi-exclamation-circle"></i></span>
             </button>
-            <span *ngIf="isErrorSavingReview" class="text-danger">Error code {{ errorCode }}</span>
+            <!-- <span *ngIf="isErrorSavingReview" class="text-danger">Error code {{ errorCode }}</span> -->
         </div>
     </div>
 </app-modal>
